# rm2anki

./: Cargo.toml  README.md
contrib/: sync_usb.sh  sync_web.sh
src/: main.rs
